--- a/flappy.html
+++ b/flappy.html
@@ -3,10 +3,12 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="css/Flappy_css.css">
-    <title>five</title>
+    <title>Bird</title>
 </head>
 <body>
-    <canvas id="chess" width="450px" height="450px"></canvas>
+    <canvas id="cvs" width="800px" height="600px">
+	<img id = "bird" src = "img/bird.png"/>
+    </canvas>
     <script type="text/javascript" src="js/Flappy_js.js"></script>
 </body>
 </html>
