--- a/flappy.html
+++ b/flappy.html
@@ -8,6 +8,8 @@
 <body>
     <canvas id="cvs" width= "1200px" height="600px">
 	<img id = "bird" src = "img/bird.png"/>
+	<img id = "back1" src = "img/background.png"/>
+	<img id = "back2" src = "img/background.png"/>
     </canvas>
     <script type="text/javascript" src="js/Flappy_js.js"></script>
 </body>
